--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -42,6 +42,8 @@ end
 group :development, :test do
   gem "byebug"
   gem "dotenv-rails"
+  gem "guard"
+  gem "guard-minitest"
   gem "launchy"
   gem "syntax_suggest"
 end
