--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -59,5 +59,6 @@ group :test do
   <%= gemfile_entry "selenium-webdriver" -%>
   gem "shoulda-context"
   gem "shoulda-matchers"
+  gem "simplecov"
   <%= gemfile_entry "webdrivers" -%>
 end
